tests/NormalTests/paczka1/small_fuzzy/16296535.err
Error in line 12: 91e A778 44,6
Error in line 11: A778 A605 9,3
